# flutter-webview-windows

./: .clang-format  .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/lib/: main.dart  main_headless.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
lib/: webview_windows.dart
lib/src/: cursor.dart  enums.dart  webview.dart
windows/: CMakeLists.txt  WebView2.h  WebView2EnvironmentOptions.h  graphics_context.cc  graphics_context.h  texture_bridge.cc  texture_bridge.h  texture_bridge_fallback.cc  texture_bridge_fallback.h  texture_bridge_gpu.cc  texture_bridge_gpu.h  webview.cc  webview.h  webview_bridge.cc  webview_bridge.h  webview_host.cc  webview_host.h  webview_platform.cc  webview_platform.h  webview_windows_plugin.cc
windows/include/webview_windows/: webview_windows_plugin.h
windows/util/: capture.desktop.interop.h  composition.desktop.interop.h  d3dutil.h  direct3d11.interop.cc  direct3d11.interop.h  dispatcher.interop.h  rohelper.cc  rohelper.h  string_converter.cc  string_converter.h  swizzle.h
windows/util/cpuid/: cpuinfo.cc  cpuinfo.h
windows/util/cpuid/detail/: cpuinfo_impl.h  extract_x86_flags.h  init_msvc_x86.h  init_unknown.h
